[BUG] Collapse Inspector Blue Box #3328 - Fixed (#3349)
* Assign-Half:  Pass 1 - working.

* Assign-Half:  Pass 2 - First part of renaming to Fund Half.

* Assign-Half:  Pass 3 - Completed renaming to Fund Half and cleaned up a little.

* Assign-Half:  Pass 4 - One last clean-up pass.

* Fund-Half:  Pass 5 - Clean-up code review items.

* [BUG] Collapse Inspector Blue Box #3328 - fixed.

--- a/src/extension/features/budget/collapse-inspector/index.css
+++ b/src/extension/features/budget/collapse-inspector/index.css
@@ -1,8 +1,14 @@
 .tk-collapse-inspector {
   position: absolute;
   bottom: 0px;
-  margin-bottom: 5px !important;
-  width: 48px;
+}
+
+.tk-collapse-inspector button {
+  width: 32px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .tk-collapse-inspector .sidebar-expand {
